# Policy-RAG

./: .gitignore  README.md  debug_markdown.md  ingest_library.py  main.py  pyproject.toml  requirements.txt  styles.css  vllm_env.sh
backend/: init_db.py
backend/app/api/: main.py
backend/app/db/: database.py  models.py  repository.py
backend/app/embeddings/: embedder.py
backend/app/extraction/: attribute_engine.py  confidence.py  highlighter.py  validator.py
backend/app/ingestion/: layout.py  pdf_reader.py  semantic_chunker.py
backend/app/llm/: ollama.py
backend/app/retrieval/: chroma_store.py  retriever.py
backend/app/ui/: dashboard.py
backend/chroma_db/: chroma.sqlite3
backend/scripts/: test_retrieval.py
data/chroma_db/: chroma.sqlite3
src/: __init__.py  attribute_extract.py  chain.py  concepts.py  constants.py  datatypes.py  formatting.py  ingestor.py  policy_chain.py  retrieval.py  vector_store.py
src/extract_attribute/: __init__.py  config.py  extraction_engine.py  post_processor.py  regex_extractor.py  retrieval_engine.py  summary_engine.py
