[project]
name = "policy-interrogator"
version = "0.1.0"
description = "Insurance policy RAG system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pdfplumber>=0.10.0",
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-classic",
    "rank_bm25",
    "langchain-community>=0.1.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.0.0",
    "langchain-classic>=1.0.7",
    "rank-bm25>=0.2.2",
    "pymupdf4llm>=1.27.2.3",
    "langchain-text-splitters>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👇 ADD THESE LINES TO FIX THE ERROR
[tool.hatch.build.targets.wheel]
packages = ["."]
