[project]
name = "policy-interrogator"
version = "0.1.0"
description = "Insurance policy RAG system"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.58.0",
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-classic>=1.0.7",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers[onnx]>=2.2.2",
    "rank-bm25>=0.2.2",
    "nltk>=3.9.4",
    "pandas>=2.0.0",
    "pymupdf4llm>=1.27.2.3",
    "torch>=2.11.0",
    "torchvision>=0.22.0",
    # vLLM stack
    "vllm==0.23.0",
    "flashinfer-python==0.6.12",
    "langchain-huggingface>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
